# FraneQL

./: CMakeLists.txt  Column.cpp  Column.h  CommandLineInterface.cpp  CommandLineInterface.h  DataType.cpp  DataType.h  Database.cpp  Database.h  ForeignKey.cpp  ForeignKey.h  Lexer.cpp  Lexer.h  Logger.cpp  Logger.h  Parser.cpp  Parser.h  PrimaryKey.cpp  PrimaryKey.h  Query.cpp  Query.h  QueryExecutor.cpp  QueryExecutor.h  README.md  Relation.cpp  Relation.h  RowBuilder.cpp  RowBuilder.h  RowValidator.cpp  RowValidator.h  Table.cpp  Table.h  TableValidator.cpp  TableValidator.h  Token.h  main.cpp
